--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">HemopiApp</string>
+    <string name="app_name">HemopApp</string>
     <string name="lista">Lista de doadores</string>
 </resources>
